Layout: fix layout issues with fixed header (#6084)
* fixes "sider-with-header-on-top" and "fixed-header-and-footer-only" layout for all the providers

* --b-bar-horizontal-height into individual providers.

* Format and recompile

---------

--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -1,4 +1,8 @@
-﻿.badge-close {
+﻿:root {
+  --b-bar-horizontal-height: 60px;
+}
+
+.badge-close {
   cursor: pointer;
 }
 .badge-close::before {
